examples/servicegraph/manifest/cpx_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.citrix.com/insecure-termination: allow
    kubernetes.io/ingress.class: netflix-cpx
  name: netflix
spec:
  rules:
  - host: netflix-frontend-service
    http:
      paths:
      - backend:
          service:
            name: netflix-frontend
            port:
              number: 5000
        pathType: ImplementationSpecific
  - host: tv-shows-service
    http:
      paths:
      - backend:
          service:
            name: tv-shows
            port:
              number: 5000
        pathType: ImplementationSpecific
  - host: movies-service
    http:
      paths:
      - backend:
          service:
            name: movies
            port:
              number: 5000
        pathType: ImplementationSpecific
  - host: metadata-store-service
    http:
      paths:
      - backend:
          service:
            name: metadata-store
            port:
              number: 5000
        pathType: ImplementationSpecific
  - host: recommendation-engine-service
    http:
      paths:
      - backend:
          service:
            name: recommendation-engine
            port:
              number: 5000
        pathType: ImplementationSpecific
  - host: similarity-calculator-service
    http:
      paths:
      - backend:
          service:
            name: similarity-calculator
            port:
              number: 5000
        pathType: ImplementationSpecific
  - host: mutual-friends-interests-service
    http:
      paths:
      - backend:
          service:
            name: mutual-friends-interests
            port:
              number: 5000
        pathType: ImplementationSpecific
  - host: trending-service
    http:
      paths:
      - backend:
          service:
            name: trending
            port:
              number: 5000
        pathType: ImplementationSpecific
  - host: telemetry-store-service
    http:
      paths:
      - backend:
          service:
            name: telemetry-store
            port:
              number: 5000
        pathType: ImplementationSpecific
  tls:
  - {}
