examples/servicegraph/manifest/vpx_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.citrix.com/analyticsprofile: '{"webinsight": {"httpurl":"ENABLED", "httpuseragent":"ENABLED",
      "httphost":"ENABLED", "httpmethod":"ENABLED", "httpcontenttype":"ENABLED"},
      "tcpinsight": {"tcpBurstReporting":"DISABLED"}}'
    ingress.citrix.com/frontend-ip: A.B.C.D
    ingress.citrix.com/insecure-termination: allow
    kubernetes.io/ingress.class: netflix-vpx
  name: vpx-netflix
spec:
  rules:
  - host: netflix-frontend-service
    http:
      paths:
      - backend:
          service:
            name: adc-netflix-cpx-service
            port:
              number: 80
        pathType: ImplementationSpecific
